--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -26,6 +26,9 @@
   font-size: 14px;
   line-height: 17px;
   color: #ff6838;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
