--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -49,6 +49,10 @@
   outline: none;
 }
 
+.profile__form-input_type_error {
+  color: #ee3465;
+}
+
 .profile__btns {
   margin: 201px 0 0;
   display: flex;
@@ -70,7 +74,7 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 16px;
-  color: #ff4062;
+  color: #ee3465;
 }
 
 @media screen and (max-width: 768px) {
