--- a/src/components/SubmitButton/SubmitButton.css
+++ b/src/components/SubmitButton/SubmitButton.css
@@ -11,6 +11,12 @@
   background-color: #ff6838;
 }
 
+.submit-btn_disabled {
+  cursor: auto;
+  background-color: #f8f8f8;
+  color: #c2c2c2;
+}
+
 @media screen and (max-width: 480px) {
   .submit-btn {
     padding: 15px 0 15px;
