--- a/src/components/InputForm/InputForm.css
+++ b/src/components/InputForm/InputForm.css
@@ -15,14 +15,27 @@
   border: none;
 }
 
-.input-label {
-  margin: 20px 0 10px;
+.input_type_error {
+  color: #ff4062;
+}
+
+.input__label {
+  margin: 15px 0 10px;
   display: flex;
   flex-direction: column;
   color: #a0a0a0;
   font-weight: 400;
   font-size: 10px;
   line-height: 12px;
+}
+
+.input__error {
+  margin: 5px 0 0;
+  height: 12px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ff4062;
 }
 
 .input__label:first-of-type {
