--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -26,6 +26,12 @@
   border: none;
 }
 
+@media screen and (min-width: 1280px) {
+  .movies-cards__list {
+    justify-content: flex-start;
+  }
+}
+
 @media screen and (width: 768px) {
   .movies-cards__list {
     justify-content: flex-start;
