--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -6,7 +6,7 @@
   gap: 22px;
 }
 
-.search__field {
+.search__form {
   width: 100%;
   padding: 0 0 13px;
   display: flex;
@@ -66,7 +66,7 @@
 }
 
 @media screen and (max-width: 550px) {
-  .search__field {
+  .search__form {
     padding: 0 0 9px;
   }
 }
